[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Vending/UnitVendingScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Dialog/PlainDialogBackground.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -5
extra_spacing_bottom = -10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -5
extra_spacing_bottom = -10
font_data = ExtResource( 2 )

[node name="UnitVendingScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PlainDialogBackground" type="Sprite" parent="."]
position = Vector2( 159.504, 95.7113 )
scale = Vector2( 0.234787, 0.52627 )
texture = ExtResource( 3 )

[node name="Cancel" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 67.9127
margin_top = -46.9813
margin_right = 126.913
margin_bottom = -26.9813
text = "_close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 0.188751
margin_top = -47.6967
margin_right = 50.1888
margin_bottom = -27.6967
text = "_buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntityName" type="Label" parent="."]
margin_left = 38.6902
margin_top = 33.5994
margin_right = 112.69
margin_bottom = 64.5994
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "_letter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = 39.0
margin_top = 69.0
margin_right = 239.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.701961 )
text = "_letters_are_used_for"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InBag" type="Label" parent="."]
margin_left = 36.0
margin_top = 120.946
margin_right = 124.0
margin_bottom = 135.946
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "In bag: 1"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourMoney" type="Label" parent="."]
margin_left = 35.5231
margin_top = 137.661
margin_right = 142.523
margin_bottom = 152.661
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your money: ฿125"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="."]
margin_left = 180.215
margin_top = 33.5994
margin_right = 254.215
margin_bottom = 64.5994
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "฿12"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Cancel" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
